--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 .header{
     width: 100%;
     min-height: 500px;
-    background-image: url('../img/bg.jpg');
-    background-size: 60%;
+    background-image: url('../img/bg.png');
+    background-size: cover;
     background-position: center top;
+    box-shadow: 1px 4px 10px rgb(27, 27, 27, 0.4);
 }
