--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 .header {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background-image: url("../img/bg.png");
   background-size: cover;
   background-position: center top;
